Fixed  everything, assignment complete
